--- a/package.json
+++ b/package.json
@@ -6,8 +6,16 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "ctest": "cypress open",
+      "clean:reports": "if exist cypress\\reports del /f /s /q cypress\\reports 1>nul && rmdir /S /Q cypress\\reports && mkdir cypress\\reports && mkdir cypress\\reports\\mochareports",
+      "pretest": "npm run clean:reports",
+      "scripts": "cypress run",
+      "combine-reports": "mochawesome-merge cypress/reports/mocha/*.json > cypress/reports/mochareports/report.json",
+      "generate-report": "marge cypress/reports/mochareports/report.json -f report -o cypress/reports/mochareports -- inline",
+      "posttest": "npm run combine-reports && npm run generate-report",
+      "test": "npm run scripts || npm run posttest"
   },
+  
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.2.0",
@@ -20,7 +28,13 @@
     "@angular/router": "~13.2.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "mocha": "7.2.0",
+    "mochawesome": "6.2.1",
+    "mochawesome-merge": "4.2.0",
+    "mochawesome-report-generator": "5.1.0",
+    "cypress-mochawesome-reporter": "1.3.0",
+    "cypress-multi-reporters": "1.4.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.2.3",
@@ -28,6 +42,7 @@
     "@angular/compiler-cli": "~13.2.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "cypress": "^10.3.1",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
